--- a/mapboxdemo20191218/src/main/resources/templates/index.html
+++ b/mapboxdemo20191218/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset='utf-8' />
-    <title>点击地图添加marker2019-12-11</title>
+    <title>华中师范大学农情数据采集系统</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 	<script src="https://cdn.staticfile.org/jquery/3.0.0/jquery.min.js"></script>
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.1.1/mapbox-gl.js'></script>
